users and group management

--- a/5.groups-in-linux.md
+++ b/5.groups-in-linux.md
@@ -11,7 +11,8 @@ There are two main kinds of groups in Linux:
 | **Group Type**                       | **Description**                                                                                                  | **Example**                                                  |
 | ------------------------------------ | ---------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------ |
 | **Primary Group**                    | Each user has exactly one **primary group**. Files created by the user are automatically assigned to this group. | User `ahmed` might have a primary group also called `ahmed`. |
-| **Secondary (Supplementary) Groups** | A user can belong to **multiple other groups** for shared access to resources.                                   | `ahmed` could also be in `sudo`, `developers`, `docker`.     |
+| **Secondary (Supplementary) Groups** | A user can belong to **multiple other groups** for shared access to resources.                                   | `ahmed` could also be in `sudo`, `developers`, `docker`.     
+
 You can check a user’s group membership with:
 `groups ahmed`
 or 
